Add authentication procedures
In order to use the application you must be authenticated; 4 levels have
been created each with different permissions for search, insert and
administration.

Other changes:
- Refactor header and config systems
- Release v0.2.0

--- a/web.config
+++ b/web.config
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
-        <defaultDocument>
-            <files>
-                <add value="cerca.php" />
-            </files>
-        </defaultDocument>
+		<security>
+			<requestFiltering>
+				<hiddenSegments>
+					<add segment="conf"/>
+				</hiddenSegments>
+			</requestFiltering>
+		</security>
     </system.webServer>
 </configuration>
