--- a/web.config
+++ b/web.config
@@ -4,8 +4,9 @@
 		<security>
 			<requestFiltering>
 				<hiddenSegments>
-					<add segment="conf"/>
+					<add segment="conf" />
 				</hiddenSegments>
+                <requestLimits maxAllowedContentLength="2000000000" />
 			</requestFiltering>
 		</security>
     </system.webServer>
